[:book:DOCS:] Remove preview features
Removed preview

Added res folder info